--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" id="view"
-          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+          content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <title>Title</title>
     <link rel="stylesheet" href="css/common.css"/>
 </head>
@@ -13,6 +14,8 @@
     <article>
 
         <section>
+
+
             <div class="header-photo header-photo_picture_section-1-faroe">
                 <div class="header-photo__text">
                     <div class="header-photo__text-header">
@@ -29,7 +32,8 @@
                         <div class="header-photo__text-subscription-content">
                             <p>
                                 Первоисточник:
-                                <a class="header-photo__text-subscription-link" href="http://silavetra.com/faroeislands">
+                                <a class="header-photo__text-subscription-link"
+                                   href="http://silavetra.com/faroeislands">
                                     http://silavetra.com/faroeislands
                                 </a>
                             </p>
@@ -45,54 +49,66 @@
                 <div class="comment comment_important">
                     <div class="comment__text">
                         <p>
-                            Пятнадцать человек и семь дней интригующей неизвестности. Все ждали той особенной свободы,
-                            присущей
-                            только северному морю на краю цивилизации.
+                            Пят&shy;над&shy;цать че&shy;ло&shy;век и семь дней ин&shy;три&shy;гу&shy;ю&shy;щей не&shy;из&shy;вест&shy;нос&shy;ти.
+                            Все жда&shy;ли той осо&shy;бен&shy;ной сво&shy;бо&shy;ды, при&shy;су&shy;щей толь&shy;ко се&shy;вер&shy;но&shy;му
+                            мо&shy;рю на краю ци&shy;ви&shy;ли&shy;за&shy;ции.
                         </p>
                     </div>
                 </div>
 
                 <div class="main-text">
                     <p class="main-text__paragraph">
-                        <span class="main-text__dropcap">В</span>сё началось праздничным январским вечером. <br>
-                        Мы с друзьями собрались, чтобы отметить Рождество,
-                        приготовить вкусный ужин и посмотреть кино. С другого конца стола я услышала:
+                        <span class="main-text__dropcap">В</span>сё на&shy;ча&shy;лось празд&shy;нич&shy;ным ян&shy;вар&shy;ским
+                        ве&shy;че&shy;ром.
+                        Мы с друзь&shy;я&shy;ми со&shy;бра&shy;лись, что&shy;бы от&shy;ме&shy;тить Рож&shy;дест&shy;во,
+                        при&shy;го&shy;то&shy;вить вкус&shy;ный ужин и по&shy;смот&shy;реть ки&shy;но. С дру&shy;го&shy;го
+                        кон&shy;ца сто&shy;ла я услы&shy;ша&shy;ла:
                     </p>
                     <p class="main-text__paragraph">
-                        — Давайте летом поедем туда! <br>
-                        — Куда? — спросила я.
+                        — Да&shy;вай&shy;те ле&shy;том по&shy;едем ту&shy;да! <br>
+                        — Ку&shy;да? — спро&shy;си&shy;ла я.
                     </p>
                     <p class="main-text__paragraph">
-                        Вместо ответа мне показали фотографии. Я ещё не знала, что это за место, в какой точке Земли
-                        находится,
-                        как называется, но уже понимала — еду!
+                        Вмес&shy;то от&shy;ве&shy;та мне по&shy;ка&shy;за&shy;ли фо&shy;то&shy;гра&shy;фии. Я ещё не зна&shy;ла,
+                        что это за мес&shy;то, в ка&shy;кой точ&shy;ке Зем&shy;ли
+                        на&shy;хо&shy;дит&shy;ся,
+                        как на&shy;зы&shy;ва&shy;ет&shy;ся, но уже по&shy;ни&shy;ма&shy;ла — еду!
                     </p>
                     <p class="main-text__paragraph">
-                        За этим последовали обычные хлопоты подготовки к поездке: получение визы, приобретение и сбор
-                        всего
-                        необходимого, поиски информации и составление маршрутов.
+                        За этим по&shy;сле&shy;до&shy;ва&shy;ли обыч&shy;ные хло&shy;по&shy;ты под&shy;го&shy;тов&shy;ки
+                        к по&shy;езд&shy;ке: по&shy;лу&shy;че&shy;ние ви&shy;зы, при&shy;о&shy;бре&shy;те&shy;ние и сбор
+                        все&shy;го
+                        не&shy;об&shy;хо&shy;ди&shy;мо&shy;го, по&shy;ис&shy;ки ин&shy;фор&shy;ма&shy;ции и со&shy;став&shy;ле&shy;ние
+                        марш&shy;ру&shy;тов.
                     </p>
                     <p class="main-text__paragraph">
-                        Вопрос о способе передвижения между островами перед нами не стоял. Две яхты были готовы к
-                        отплытию
+                        Во&shy;прос о спо&shy;со&shy;бе пе&shy;ре&shy;дви&shy;же&shy;ния меж&shy;ду ост&shy;ро&shy;ва&shy;ми
+                        пе&shy;ред на&shy;ми не сто&shy;ял. Две ях&shy;ты бы&shy;ли го&shy;то&shy;вы к
+                        от&shy;плы&shy;тию
                         26
-                        июля 2015 года. Кстати говоря, мы были первыми, кто арендовал яхты на целую неделю. В нашем
-                        распоряжении
-                        была лоция с подробной информацией о маринах, течениях, ветрах, но никаких фотографий, описаний,
-                        отзывов
-                        и впечатлений других яхтсменов мы не нашли. Это дало нам прекрасный шанс почувствовать себя
-                        первооткрывателями.
+                        июля 2015 го&shy;да. Кста&shy;ти го&shy;во&shy;ря, мы бы&shy;ли пер&shy;вы&shy;ми, кто арен&shy;до&shy;вал
+                        ях&shy;ты на це&shy;лую не&shy;де&shy;лю. В на&shy;шем
+                        рас&shy;по&shy;ря&shy;же&shy;нии
+                        бы&shy;ла ло&shy;ция с под&shy;роб&shy;ной ин&shy;фор&shy;ма&shy;ци&shy;ей о ма&shy;ри&shy;нах,
+                        те&shy;че&shy;ни&shy;ях, вет&shy;рах, но ни&shy;ка&shy;ких фо&shy;то&shy;гра&shy;фий, опи&shy;са&shy;ний,
+                        от&shy;зы&shy;вов
+                        и впе&shy;чат&shy;ле&shy;ний дру&shy;гих яхт&shy;сме&shy;нов мы не на&shy;шли. Это да&shy;ло нам
+                        пре&shy;крас&shy;ный шанс по&shy;чувст&shy;во&shy;вать се&shy;бя
+                        пер&shy;во&shy;от&shy;кры&shy;ва&shy;те&shy;ля&shy;ми.
                     </p>
                 </div>
 
                 <div class="comment comment_important comment_bottom">
                     <div class="comment__text">
                         <p>
-                            Практически всё, что мы знали о Фарерах, когда садились в самолет, — это то, что овец в этом
-                            месте
-                            больше, чем людей, что фарерцы охотятся на дельфинов, что там живут смешные птицы под
-                            названием
-                            тупики, что острова — одно из самых рыбных мест на Земле, и там очень красиво.
+                            Прак&shy;ти&shy;чес&shy;ки всё, что мы зна&shy;ли о Фа&shy;ре&shy;рах, ког&shy;да са&shy;ди&shy;лись
+                            в са&shy;мо&shy;лет, — это то, что овец в этом
+                            мес&shy;те
+                            боль&shy;ше, чем лю&shy;дей, что фа&shy;рер&shy;цы охо&shy;тят&shy;ся на дель&shy;фи&shy;нов,
+                            что там жи&shy;вут смеш&shy;ные пти&shy;цы под
+                            на&shy;зва&shy;ни&shy;ем
+                            ту&shy;пи&shy;ки, что ост&shy;ро&shy;ва — од&shy;но из са&shy;мых рыб&shy;ных мест на Зем&shy;ле,
+                            и там очень кра&shy;си&shy;во.
                         </p>
                     </div>
                 </div>
@@ -117,38 +133,48 @@
                 <div class="comment comment_important">
                     <div class="comment__text">
                         <p>
-                            Первыми жителями Фарерских островов, которых мы встретили, оказались овцы. Они просто гуляли
+                            Пер&shy;вы&shy;ми жи&shy;те&shy;ля&shy;ми Фа&shy;рер&shy;ских ост&shy;ро&shy;вов, ко&shy;то&shy;рых
+                            мы встре&shy;ти&shy;ли, ока&shy;за&shy;лись ов&shy;цы. Они прос&shy;то гу&shy;ля&shy;ли
                             по
-                            территории аэропорта.
+                            тер&shy;ри&shy;то&shy;рии аэро&shy;пор&shy;та.
                         </p>
                     </div>
                 </div>
 
                 <div class="main-text">
                     <p class="main-text__paragraph">
-                        Когда самолёт, выполняющий рейс Копенгаген — Воар (Vágar), начал снижаться, мы прилипли к
-                        иллюминаторам.
-                        Всюду был туман, из которого вдруг выплыли величественные скалы и то самое знаменитое озеро
-                        Сёрвагсватн
-                        (Sørvágsvatn), над которым мы летели так низко, что казалось, будто самолет будет приводняться.
+                        Ког&shy;да са&shy;мо&shy;лёт, вы&shy;пол&shy;ня&shy;ю&shy;щий рейс Ко&shy;пен&shy;га&shy;ген —
+                        Во&shy;ар (Vágar), на&shy;чал сни&shy;жать&shy;ся, мы при&shy;лип&shy;ли к
+                        ил&shy;лю&shy;ми&shy;на&shy;то&shy;рам.
+                        Всю&shy;ду был ту&shy;ман, из ко&shy;то&shy;ро&shy;го вдруг вы&shy;плы&shy;ли ве&shy;ли&shy;чест&shy;вен&shy;ные
+                        ска&shy;лы и то са&shy;мое зна&shy;ме&shy;ни&shy;тое озе&shy;ро
+                        Сёр&shy;ваг&shy;с&shy;ватн
+                        (Sørvágsvatn), над ко&shy;то&shy;рым мы ле&shy;те&shy;ли так низ&shy;ко, что ка&shy;за&shy;лось,
+                        буд&shy;то са&shy;мо&shy;лет бу&shy;дет при&shy;вод&shy;нять&shy;ся.
                     </p>
                     <p class="main-text__paragraph">
-                        Мы ещё не сошли на землю, но уже впечатлились суровым пейзажем: невероятные зелёные холмы,
-                        высоченные
-                        утёсы, такие ровные, будто их ножом срезали, тёмная, живая вода океана, густой туман и водопады.
-                        Фарерские острова — это страна мистических туманов, ветров и водопадов. По местной легенде,
-                        названия
-                        водопадов — это вербальное выражение уникального шума каждого из них. Фарерцы слушали их и
-                        давали
-                        имена.
+                        Мы ещё не со&shy;шли на зем&shy;лю, но уже впе&shy;чат&shy;ли&shy;лись су&shy;ро&shy;вым пей&shy;за&shy;жем:
+                        не&shy;ве&shy;ро&shy;ят&shy;ные зе&shy;лё&shy;ные хол&shy;мы,
+                        вы&shy;со&shy;чен&shy;ные
+                        утё&shy;сы, та&shy;кие ров&shy;ные, буд&shy;то их но&shy;жом сре&shy;за&shy;ли, тём&shy;ная, жи&shy;вая
+                        во&shy;да оке&shy;а&shy;на, гус&shy;той ту&shy;ман и во&shy;до&shy;па&shy;ды.
+                        Фа&shy;рер&shy;ские ост&shy;ро&shy;ва — это стра&shy;на мис&shy;ти&shy;чес&shy;ких ту&shy;ма&shy;нов,
+                        вет&shy;ров и во&shy;до&shy;па&shy;дов. По мест&shy;ной ле&shy;ген&shy;де,
+                        на&shy;зва&shy;ния
+                        во&shy;до&shy;па&shy;дов — это вер&shy;баль&shy;ное вы&shy;ра&shy;же&shy;ние уни&shy;каль&shy;но&shy;го
+                        шу&shy;ма каж&shy;до&shy;го из них. Фа&shy;рер&shy;цы слу&shy;ша&shy;ли их и
+                        да&shy;ва&shy;ли
+                        име&shy;на.
                     </p>
                 </div>
 
                 <div class="comment comment_bottom">
                     <div class="comment__text">
                         <p>
-                            Если вы не арендуете машину, заранее посмотрите расписание автобусов из аэропорта в Торсхавн
-                            (Torshavn). Они ходят достаточно редко. Стоимость билета — 90 датских крон (примерно 850 р.)
+                            Если вы не арен&shy;ду&shy;е&shy;те ма&shy;ши&shy;ну, за&shy;ра&shy;нее по&shy;смот&shy;ри&shy;те
+                            рас&shy;пи&shy;са&shy;ние ав&shy;то&shy;бу&shy;сов из аэро&shy;пор&shy;та в Тор&shy;с&shy;хавн
+                            (Torshavn). Они хо&shy;дят до&shy;ста&shy;точ&shy;но ред&shy;ко. Сто&shy;и&shy;мость би&shy;ле&shy;та
+                            — 90 дат&shy;ских крон (при&shy;мер&shy;но 850 р.)
                         </p>
                     </div>
                 </div>
