--- a/task2/index.html
+++ b/task2/index.html
@@ -12,7 +12,7 @@
     <!-- Thanks for assets to Kenny at http://kenney.nl/assets/platformer-pack-redux -->
     <div class="app container">
         <div class="level level_0"><div class="door door_locked door_level_0"></div></div>
-        <div class="level level_1"><div class="door door_locked door_disabled door_level_1"></div></div>
+        <div class="level level_1"><div class="door door_locked door_level_1"></div></div>
         <div class="level level_2"><div class="door door_locked door_disabled door_level_2"></div></div>
         <div class="level level_3"><div class="box box_locked door door_disabled door_level_3"></div></div>
         <div class="level level_4"></div>
@@ -28,8 +28,11 @@
             </div>
         </div>
         <div class="popup popup_hidden popup_level_1">
-            <div class="popup__content popup__content_level_1">
+            <div class="popup__content popup__content_level_1" touch-action="none">
                 <div class="popup__close">╳</div>
+                <div class="door-riddle">
+                    <div class="door-riddle__wood"></div>
+                </div>
             </div>
         </div>
         <div class="popup popup_hidden popup_level_2">
