--- a/task2/index.html
+++ b/task2/index.html
@@ -32,6 +32,9 @@
                 <div class="popup__close">╳</div>
                 <div class="door-riddle">
                     <div class="door-riddle__wood"></div>
+                    <div class="door-riddle__alarm"></div>
+                    <div class="door-riddle__button door-riddle__button_0"></div>
+                    <div class="door-riddle__button door-riddle__button_1"></div>
                 </div>
             </div>
         </div>
