--- a/task2/index.html
+++ b/task2/index.html
@@ -9,50 +9,68 @@
 </head>
 
 <body>
-    <!-- Thanks for assets to Kenny at http://kenney.nl/assets/platformer-pack-redux -->
-    <div class="app container">
-        <div class="level level_0"><div class="door door_locked door_level_0"></div></div>
-        <div class="level level_1"><div class="door door_locked door_level_1"></div></div>
-        <div class="level level_2"><div class="door door_locked door_disabled door_level_2"></div></div>
-        <div class="level level_3"><div class="box box_locked door door_disabled door_level_3"></div></div>
-        <div class="level level_4"></div>
+<!-- Thanks for assets to Kenny at http://kenney.nl/assets/platformer-pack-redux -->
+<div class="app container">
+    <div class="level level_0">
+        <div class="door door_locked door_level_0"></div>
+    </div>
+    <div class="level level_1">
+        <div class="door door_locked door_level_1"></div>
+    </div>
+    <div class="level level_2">
+        <div class="door door_locked door_disabled door_level_2"></div>
+    </div>
+    <div class="level level_3">
+        <div class="box box_locked door door_disabled door_level_3"></div>
+    </div>
+    <div class="level level_4"></div>
 
-        <div class="popup popup_hidden popup_level_0">
-            <div class="popup__content popup__content_level_0" touch-action="none">
-                <div class="popup__close">╳</div>
-                <div class="door-riddle">
-                    <div class="door-riddle__button door-riddle__button_0"></div>
-                    <div class="door-riddle__button door-riddle__button_1"></div>
-                    <div class="door-riddle__button door-riddle__button_2"></div>
-                </div>
-            </div>
-        </div>
-        <div class="popup popup_hidden popup_level_1">
-            <div class="popup__content popup__content_level_1" touch-action="none">
-                <div class="popup__close">╳</div>
-                <div class="door-riddle">
-                    <div class="door-riddle__wood"></div>
-                    <div class="door-riddle__alarm"></div>
-                    <div class="door-riddle__button door-riddle__button_0"></div>
-                    <div class="door-riddle__button door-riddle__button_1"></div>
-                </div>
-            </div>
-        </div>
-        <div class="popup popup_hidden popup_level_2">
-            <div class="popup__content popup__content_level_2">
-                <div class="popup__close">╳</div>
-            </div>
-        </div>
-        <div class="popup popup_hidden popup_level_3">
-            <div class="popup__content popup__content_level_3">
-                <div class="popup__close">╳</div>
+    <div class="popup popup_hidden popup_level_0">
+        <div class="popup__content popup__content_level_0" touch-action="none">
+            <div class="popup__close">╳</div>
+            <div class="door-riddle">
+                <div class="door-riddle__button door-riddle__button_0"></div>
+                <div class="door-riddle__button door-riddle__button_1"></div>
+                <div class="door-riddle__button door-riddle__button_2"></div>
             </div>
         </div>
     </div>
+    <div class="popup popup_hidden popup_level_1">
+        <div class="popup__content popup__content_level_1" touch-action="none">
+            <div class="popup__close">╳</div>
+            <div class="door1-riddle">
+                <div class="door-riddle__alarm"></div>
 
-    <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
-    <script src="js/doorBase.js"></script>
-    <script src="js/doorOthers.js"></script>
-    <script src="js/app.js"></script>
+                <div class="door-riddle__wood-wrap">
+                    <div class="door-riddle__wood">
+                        <div class="door-riddle__wood-button-wrap">
+                            <div class="door-riddle__wood-button"></div>
+                            <div class="door-riddle__wood-button-target"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="door-riddle__button door-riddle__button_0"></div>
+                <div class="door-riddle__button door-riddle__button_1"></div>
+            </div>
+        </div>
+    </div>
+    <div class="popup popup_hidden popup_level_2">
+        <div class="popup__content popup__content_level_2">
+            <div class="popup__close">╳</div>
+        </div>
+    </div>
+    <div class="popup popup_hidden popup_level_3">
+        <div class="popup__content popup__content_level_3">
+            <div class="popup__close">╳</div>
+        </div>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
+<script src="js/doorBase.js"></script>
+<script src="js/door1.js"></script>
+<script src="js/doorOthers.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
