--- a/task2/index.html
+++ b/task2/index.html
@@ -5,6 +5,7 @@
     <title>Dungeon of Doom</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/box.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -18,10 +19,12 @@
         <div class="door door_locked door_level_1"></div>
     </div>
     <div class="level level_2">
-        <div class="door door_locked door_disabled door_level_2"></div>
+        <!--<div class="door door_locked door_disabled door_level_2"></div>-->
+        <div class="door door_locked door_level_2"></div>
     </div>
     <div class="level level_3">
-        <div class="box box_locked door door_disabled door_level_3"></div>
+        <!--<div class="box box_locked door door_disabled door_level_3"></div>-->
+        <div class="box box_locked door door_level_3"></div>
     </div>
     <div class="level level_4"></div>
 
@@ -35,6 +38,7 @@
             </div>
         </div>
     </div>
+
     <div class="popup popup_hidden popup_level_1">
         <div class="popup__content popup__content_level_1" touch-action="none">
             <div class="popup__close">╳</div>
@@ -43,7 +47,7 @@
 
                 <div class="door-riddle__wood-wrap">
                     <div class="door-riddle__wood">
-                        <div class="door-riddle__wood-buttons-wrap">
+                        <div class="door-riddle__wood-buttons-wrap door-riddle__wood-buttons-wrap_visible">
                             <div class="door-riddle__wood-button"></div>
                             <div class="door-riddle__wood-button-target"></div>
                         </div>
@@ -55,14 +59,39 @@
             </div>
         </div>
     </div>
-    <div class="popup popup_hidden popup_level_2">
+
+    <div class="popup popup_hidden popup_level_2" touch-action="none">
+    <!--<div class="popup popup_level_2" touch-action="none">-->
         <div class="popup__content popup__content_level_2">
             <div class="popup__close">╳</div>
+
+            <div class="door1-riddle">
+
+                <div class="door-riddle__circle0">
+                    <div class="door-riddle__circle1">
+                        <div class="door-riddle2__button door2-riddle__button_0"></div>
+                        <div class="door-riddle__circle2"></div>
+                        <div class="door-riddle2__button door2-riddle__button_1"></div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
-    <div class="popup popup_hidden popup_level_3">
+
+    <!--<div class="popup popup_hidden popup_level_3" touch-action="none">-->
+    <div class="popup popup_level_3" touch-action="none">
         <div class="popup__content popup__content_level_3">
             <div class="popup__close">╳</div>
+
+            <div class="box-riddle">
+                <div class="box-riddle__ball box-riddle_ball_0 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle_ball_1 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle_ball_2 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle_ball_3 box-riddle__ball_active"></div>
+            </div>
+
+
         </div>
     </div>
 </div>
@@ -70,7 +99,10 @@
 <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
 <script src="js/doorBase.js"></script>
 <script src="js/door1.js"></script>
+<script src="js/door2.js"></script>
+<script src="js/box.js"></script>
 <script src="js/doorOthers.js"></script>
 <script src="js/app.js"></script>
+<script src="js/helper.js"></script>
 </body>
 </html>
