--- a/task2/index.html
+++ b/task2/index.html
@@ -5,6 +5,7 @@
     <title>Dungeon of Doom</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/door2.css">
     <link rel="stylesheet" href="css/box.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -39,7 +40,8 @@
         </div>
     </div>
 
-    <div class="popup popup_hidden popup_level_1">
+    <!--<div class="popup popup_hidden popup_level_1">-->
+    <div class="popup popup_level_1">
         <div class="popup__content popup__content_level_1" touch-action="none">
             <div class="popup__close">╳</div>
             <div class="door1-riddle">
@@ -67,20 +69,20 @@
 
             <div class="door1-riddle">
 
-                <div class="door-riddle__circle0">
-                    <div class="door-riddle__circle1">
+
+                    <div class="door-riddle__circle1 ">
                         <div class="door-riddle2__button door2-riddle__button_0"></div>
                         <div class="door-riddle__circle2"></div>
                         <div class="door-riddle2__button door2-riddle__button_1"></div>
                     </div>
-                </div>
+
 
             </div>
         </div>
     </div>
 
-    <!--<div class="popup popup_hidden popup_level_3" touch-action="none">-->
-    <div class="popup popup_level_3" touch-action="none">
+    <div class="popup popup_hidden popup_level_3" touch-action="none">
+    <!--<div class="popup popup_level_3" touch-action="none">-->
         <div class="popup__content popup__content_level_3">
             <div class="popup__close">╳</div>
 
