--- a/task2/index.html
+++ b/task2/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/door2.css">
     <link rel="stylesheet" href="css/box.css">
+    <link rel="stylesheet" href="css/slider.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -42,63 +43,72 @@
 
     <!--<div class="popup popup_hidden popup_level_1">-->
     <div class="popup popup_level_1">
-        <div class="popup__content popup__content_level_1" touch-action="none">
-            <div class="popup__close">╳</div>
-            <div class="door1-riddle">
-                <div class="door-riddle__alarm"></div>
+        <div class="popup popup_level_1">
+            <div class="popup__content popup__content_level_1" touch-action="none">
+                <div class="popup__close">╳</div>
+                <div class="door1-riddle">
 
-                <div class="door-riddle__wood-wrap">
-                    <div class="door-riddle__wood">
-                        <div class="door-riddle__wood-buttons-wrap door-riddle__wood-buttons-wrap_visible">
-                            <div class="door-riddle__wood-button"></div>
-                            <div class="door-riddle__wood-button-target"></div>
+                    <div class="slider">
+                        <div class="slider__button">
+
                         </div>
                     </div>
-                </div>
 
-                <div class="door-riddle__button door-riddle__button_0"></div>
-                <div class="door-riddle__button door-riddle__button_1"></div>
+                    <!--<div class="door-riddle__alarm"></div>-->
+
+                    <!--<div class="door-riddle__wood-wrap">-->
+                    <!--<div class="door-riddle__wood">-->
+                    <!--<div class="door-riddle__wood-buttons-wrap door-riddle__wood-buttons-wrap_visible">-->
+                    <!--<div class="door-riddle__wood-button"></div>-->
+                    <!--<div class="door-riddle__wood-button-target"></div>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</div>-->
+
+                    <!--<div class="door-riddle__button door-riddle__button_0"></div>-->
+                    <!--<div class="door-riddle__button door-riddle__button_1"></div>-->
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="popup popup_hidden popup_level_2" touch-action="none">
-    <!--<div class="popup popup_level_2" touch-action="none">-->
-        <div class="popup__content popup__content_level_2">
-            <div class="popup__close">╳</div>
+        <div class="popup popup_hidden popup_level_2" touch-action="none">
+            <!--<div class="popup popup_level_2" touch-action="none">-->
+            <div class="popup__content popup__content_level_2">
+                <div class="popup__close">╳</div>
 
-            <div class="door1-riddle">
+                <div class="door1-riddle">
 
 
                     <div class="door-riddle__circle1 ">
-                        <div class="door-riddle2__button door2-riddle__button_0"></div>
+                        <!--<div class="door-riddle2__button door2-riddle__button_0"></div>-->
                         <div class="door-riddle__circle2"></div>
-                        <div class="door-riddle2__button door2-riddle__button_1"></div>
+                        <!--<div class="door-riddle2__button door2-riddle__button_1"></div>-->
                     </div>
 
 
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="popup popup_hidden popup_level_3" touch-action="none">
-    <!--<div class="popup popup_level_3" touch-action="none">-->
-        <div class="popup__content popup__content_level_3">
-            <div class="popup__close">╳</div>
+        <div class="popup popup_hidden popup_level_3" touch-action="none">
+            <!--<div class="popup popup_level_3" touch-action="none">-->
+            <div class="popup__content popup__content_level_3">
+                <div class="popup__close">╳</div>
 
-            <div class="box-riddle">
-                <div class="box-riddle__ball box-riddle_ball_0 box-riddle__ball_active"></div>
-                <div class="box-riddle__ball box-riddle_ball_1 box-riddle__ball_active"></div>
-                <div class="box-riddle__ball box-riddle_ball_2 box-riddle__ball_active"></div>
-                <div class="box-riddle__ball box-riddle_ball_3 box-riddle__ball_active"></div>
+                <div class="box-riddle">
+                    <div class="box-riddle__ball box-riddle_ball_0 box-riddle__ball_active"></div>
+                    <div class="box-riddle__ball box-riddle_ball_1 box-riddle__ball_active"></div>
+                    <div class="box-riddle__ball box-riddle_ball_2 box-riddle__ball_active"></div>
+                    <div class="box-riddle__ball box-riddle_ball_3 box-riddle__ball_active"></div>
+                </div>
+
+
             </div>
-
-
         </div>
     </div>
 </div>
-
 <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
+<script src="js/slider.js"></script>
 <script src="js/doorBase.js"></script>
 <script src="js/door1.js"></script>
 <script src="js/door2.js"></script>
