--- a/task2/index.html
+++ b/task2/index.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
 
-                    <div class="door1-riddle__button door1-riddle__button_0 door1-riddle__button_pressed"></div>
+                    <div class="door1-riddle__button door1-riddle__button_0"></div>
                     <div class="door1-riddle__button door1-riddle__button_1"></div>
                 </div>
             </div>
