--- a/task2/index.html
+++ b/task2/index.html
@@ -52,7 +52,7 @@
                     <div class="door1-riddle__alarm"></div>
 
                     <div class="door1-riddle__slider-wrap">
-                        <div class="slider slider_invisible">
+                        <div class="slider">
                             <div class="slider__button"></div>
                         </div>
                     </div>
