--- a/task2/index.html
+++ b/task2/index.html
@@ -42,8 +42,8 @@
         </div>
     </div>
 
-    <!--<div class="popup popup_hidden popup_level_1">-->
-    <div class="popup popup_level_1">
+    <div class="popup popup_hidden popup_level_1">
+    <!--<div class="popup popup_level_1">-->
         <div class="popup popup_level_1">
             <div class="popup__content popup__content_level_1" touch-action="none">
                 <div class="popup__close">╳</div>
@@ -65,8 +65,8 @@
 
     </div>
 
-    <div class="popup popup_hidden popup_level_2" touch-action="none">
-        <!--<div class="popup popup_level_2" touch-action="none">-->
+    <!--<div class="popup popup_hidden popup_level_2" touch-action="none">-->
+        <div class="popup popup_level_2" touch-action="none">
         <div class="popup__content popup__content_level_2">
             <div class="popup__close">╳</div>
 
@@ -74,11 +74,15 @@
 
 
                 <div class="door-riddle__circle1 ">
-                    <!--<div class="door-riddle2__button door2-riddle__button_0"></div>-->
-                    <div class="door-riddle__circle2"></div>
-                    <!--<div class="door-riddle2__button door2-riddle__button_1"></div>-->
+                    <div class="door-riddle__circle2">
+                        <div class="door-riddle__circle3"></div>
+                    </div>
                 </div>
 
+
+                <!--<div class="door-riddle2__button door2-riddle__button_0"></div>-->
+                <!--
+                <!--<div class="door-riddle2__button door2-riddle__button_1"></div>-->
 
             </div>
         </div>
@@ -102,13 +106,18 @@
 </div>
 
 <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
+
+
+<script src="js/helper.js"></script>
 <script src="js/slider.js"></script>
 <script src="js/doorBase.js"></script>
+<script src="js/doorOthers.js"></script>
 <script src="js/door1.js"></script>
 <script src="js/door2.js"></script>
 <script src="js/box.js"></script>
-<script src="js/doorOthers.js"></script>
 <script src="js/app.js"></script>
-<script src="js/helper.js"></script>
+
+
+
 </body>
 </html>
