--- a/task2/index.html
+++ b/task2/index.html
@@ -75,7 +75,7 @@
 
                 <div class="door-riddle__circle1 ">
                     <div class="door-riddle__circle2">
-                        <div class="door-riddle__circle3"></div>
+                        <!--<div class="door-riddle__circle3"></div>-->
                     </div>
                 </div>
 
