--- a/task2/index.html
+++ b/task2/index.html
@@ -70,12 +70,13 @@
         <div class="popup__content popup__content_level_2">
             <div class="popup__close">╳</div>
 
-            <div class="door1-riddle">
+            <div class="door2-riddle">
 
+                <div class="door2-riddle-monitor"></div>
 
-                <div class="door-riddle__circle1 ">
-                    <div class="door-riddle__circle2">
-                        <!--<div class="door-riddle__circle3"></div>-->
+                <div class="door2-riddle__circle1 ">
+                    <div class="door2-riddle__circle2">
+                        <!--<div class="door2-riddle__circle3"></div>-->
                     </div>
                 </div>
 
