--- a/task2/index.html
+++ b/task2/index.html
@@ -76,7 +76,7 @@
 
                 <div class="door2-riddle__circle1 ">
                     <div class="door2-riddle__circle2">
-                        <!--<div class="door2-riddle__circle3"></div>-->
+                        <div class="door2-riddle__circle3"></div>
                     </div>
                 </div>
 
