--- a/task2/index.html
+++ b/task2/index.html
@@ -75,7 +75,7 @@
                 <div class="door2-riddle-monitor"></div>
 
                 <div class="door2-riddle__circle1 ">
-                    <div class="door2-riddle__circle2">
+                    <div class="door2-riddle__button door2-riddle__button_pressed">
                         <!--<div class="door2-riddle__circle3"></div>-->
                     </div>
                 </div>
