--- a/task2/index.html
+++ b/task2/index.html
@@ -19,17 +19,14 @@
         <div class="door door_locked door_level_0"></div>
     </div>
     <div class="level level_1">
-        <div class="door door_locked door_level_1"></div>
+        <div class="door door_locked door_disabled door_level_1"></div>
     </div>
     <div class="level level_2">
-        <!--<div class="door door_locked door_disabled door_level_2"></div>-->
-        <div class="door door_locked door_level_2"></div>
+        <div class="door door_locked door_disabled door_level_2"></div>
     </div>
     <div class="level level_3">
-        <!--<div class="box box_locked door door_disabled door_level_3"></div>-->
-        <div class="box box_locked door door_level_3"></div>
+        <div class="box door_locked door door_disabled door_level_3"></div>
     </div>
-    <div class="level level_4"></div>
 
     <div class="popup popup_hidden popup_level_0">
         <div class="popup__content popup__content_level_0" touch-action="none">
@@ -43,8 +40,7 @@
     </div>
 
     <div class="popup popup_hidden popup_level_1">
-    <!--<div class="popup popup_level_1">-->
-        <div class="popup popup_level_1">
+        <div class="popup popup_hidden popup_level_1">
             <div class="popup__content popup__content_level_1" touch-action="none">
                 <div class="popup__close">╳</div>
                 <div class="door1-riddle">
@@ -52,7 +48,7 @@
                     <div class="door1-riddle__alarm"></div>
 
                     <div class="door1-riddle__slider-wrap">
-                        <div class="slider slider_invisible">
+                        <div class="slider ">
                             <div class="slider__button"></div>
                         </div>
                     </div>
@@ -65,14 +61,13 @@
 
     </div>
 
-    <!--<div class="popup popup_hidden popup_level_2" touch-action="none">-->
-        <div class="popup popup_level_2" touch-action="none">
+    <div class="popup popup_hidden popup_level_2" touch-action="none">
         <div class="popup__content popup__content_level_2">
             <div class="popup__close">╳</div>
 
             <div class="door2-riddle">
 
-                <div class="door2-riddle-monitor"></div>
+                <div class="door2-riddle__monitor"></div>
 
                 <div class="door2-riddle__circle1 ">
                     <div class="door2-riddle__button">
@@ -80,25 +75,19 @@
                     </div>
                 </div>
 
-
-                <!--<div class="door-riddle2__button door2-riddle__button_0"></div>-->
-                <!--
-                <!--<div class="door-riddle2__button door2-riddle__button_1"></div>-->
-
             </div>
         </div>
     </div>
 
     <div class="popup popup_hidden popup_level_3" touch-action="none">
-        <!--<div class="popup popup_level_3" touch-action="none">-->
         <div class="popup__content popup__content_level_3">
             <div class="popup__close">╳</div>
 
             <div class="box-riddle">
-                <div class="box-riddle__ball box-riddle_ball_0 box-riddle__ball_active"></div>
-                <div class="box-riddle__ball box-riddle_ball_1 box-riddle__ball_active"></div>
-                <div class="box-riddle__ball box-riddle_ball_2 box-riddle__ball_active"></div>
-                <div class="box-riddle__ball box-riddle_ball_3 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle__ball_0 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle__ball_1 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle__ball_2 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle__ball_3 box-riddle__ball_active"></div>
             </div>
 
 
