--- a/task2/index.html
+++ b/task2/index.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="popup popup_hidden popup_level_3" touch-action="none">
+    <div class="popup  popup_level_3" touch-action="none">
         <div class="popup__content popup__content_level_3">
             <div class="popup__close">╳</div>
 
@@ -86,6 +86,7 @@
                 <div class="box-riddle__ball box-riddle__ball_1 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_2 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_3 box-riddle__ball_active"></div>
+                <div class="box-riddle__ball box-riddle__ball_4 box-riddle__ball_active"></div>
             </div>
 
 
