--- a/task2/index.html
+++ b/task2/index.html
@@ -81,13 +81,18 @@
         <div class="popup__content popup__content_level_3">
             <div class="popup__close">╳</div>
 
-            <div class="box-riddle">
+
+            <div>
+           <div class="box-riddle">
+
+
                 <div class="box-riddle__ball box-riddle__ball_0 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_1 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_2 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_3 box-riddle__ball_active"></div>
-                <div class="box-riddle__ball box-riddle__ball_4 box-riddle__ball_active"></div>
             </div>
+            </div>
+
 
 
         </div>
