--- a/task2/index.html
+++ b/task2/index.html
@@ -39,24 +39,24 @@
         </div>
     </div>
 
-        <div class="popup popup_hidden popup_level_1">
-            <div class="popup__content popup__content_level_1" touch-action="none">
-                <div class="popup__close">╳</div>
-                <div class="door1-riddle">
+    <div class="popup popup_hidden popup_level_1">
+        <div class="popup__content popup__content_level_1" touch-action="none">
+            <div class="popup__close">╳</div>
+            <div class="door1-riddle">
 
-                    <div class="door1-riddle__alarm"></div>
+                <div class="door1-riddle__alarm"></div>
 
-                    <div class="door1-riddle__slider-wrap">
-                        <div class="slider slider_invisible">
-                            <div class="slider__button"></div>
-                        </div>
+                <div class="door1-riddle__slider-wrap">
+                    <div class="slider slider_invisible">
+                        <div class="slider__button"></div>
                     </div>
-
-                    <div class="door1-riddle__button door1-riddle__button_0"></div>
-                    <div class="door1-riddle__button door1-riddle__button_1"></div>
                 </div>
+
+                <div class="door1-riddle__button door1-riddle__button_0"></div>
+                <div class="door1-riddle__button door1-riddle__button_1"></div>
             </div>
         </div>
+    </div>
 
 
     <div class="popup popup_hidden popup_level_2" touch-action="none">
@@ -77,23 +77,17 @@
         </div>
     </div>
 
-    <div class="popup  popup_level_3" touch-action="none">
+    <div class="popup popup_hidden popup_level_3" touch-action="none">
         <div class="popup__content popup__content_level_3">
             <div class="popup__close">╳</div>
 
-
-            <div>
-           <div class="box-riddle">
-
+            <div class="box-riddle">
 
                 <div class="box-riddle__ball box-riddle__ball_0 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_1 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_2 box-riddle__ball_active"></div>
                 <div class="box-riddle__ball box-riddle__ball_3 box-riddle__ball_active"></div>
             </div>
-            </div>
-
-
 
         </div>
     </div>
@@ -110,7 +104,6 @@
 <script src="js/door2.js"></script>
 <script src="js/box.js"></script>
 <script src="js/app.js"></script>
-
 
 
 </body>
